# youtube-downloader-rust

./: .gitignore  README.md  index.html  package-lock.json  package.json  rebuild_plan.md  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml
plans/: ui-modernization-plan.md
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: csv_parser.rs  ffmpeg_setup.rs  file_processor.rs  lib.rs  main.rs  metadata.rs  youtube_client.rs  ytdlp_setup.rs
src/components/: AboutModal.tsx  FfmpegWarning.tsx  SetupOverlay.tsx
src/components/layout/: MainLayout.tsx
src/components/ui/: Button.tsx  Card.tsx  Input.tsx  Modal.tsx  Textarea.tsx
src/store/: DownloadStore.tsx
src/test/: App.test.tsx  Button.test.tsx  Card.test.tsx  DownloadInput.test.tsx  DownloadStore.test.tsx  Input.test.tsx  MainLayout.test.tsx  MainLayoutComponents.test.tsx  Textarea.test.tsx
