[package]
name = "lyricut-yt-downloader"
version = "0.1.0"
description = "Lyricut YT Downloader - A modern YouTube audio downloader"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lyricut_yt_downloader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
csv = "1"
id3 = "1"
reqwest = { version = "0.11", features = ["rustls-tls"] }
tokio = { version = "1", features = ["fs"] }

